# optimas

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_run.sh
.github/workflows/: ci.yml
docs/: gepa_adapter.md
examples/data/: README.md  combined_PubMedQA_test.jsonl  combined_PubMedQA_train.jsonl  multilingual_session_based_recommendation_dataset.csv  session_based_next_item_selection_dataset.csv
examples/datasets/: __init__.py  amazon.py  bigcodebench.py  hotpotqa.py  pubmed.py  stark_prime.py
examples/metrics/: exact_match.py  f1_score.py  mrr.py  pass_rate.py
examples/systems/: __init__.py
examples/systems/amazon/: local_models_for_next_item_selection.py
examples/systems/bigcodebench/: four_components.py
examples/systems/hotpotqa/: five_components.py
examples/systems/pubmed/: three_components_with_model_selection.py
examples/systems/stark/: bio_system.py
optimas/: __init__.py  eval.py  reward_dataset.py  reward_model.py
optimas/adapt/: autogen.py  crewai.py  dspy.py  openai.py  textgrad.py  utils.py
optimas/arch/: __init__.py  base.py  system.py
optimas/collect/: process.py  rollouts.py
optimas/optim/: args.py  cp_optimizer.py  opro.py  optimizer.py  ppo.py
optimas/train/: callback.py  finetune.py  metrics.py  reward_config.py  reward_trainer.py  reward_trainer_utils.py
optimas/utils/: api.py  context.py  display.py  load.py  logger.py  lora.py  operation.py  parallel.py  save.py  template.py
optimas/wrappers/: example.py  prediction.py
scripts/: eval_system.py  generate_dataset.py  optimize_system.py  train_reward_model.py
scripts/configs/eval/: amazon_vanilla.yaml  bigcodebench_vanilla.yaml  hotpotqa_vanilla.yaml  pubmed_vanilla.yaml  stark_vanilla.yaml
scripts/configs/generate/: amazon.yaml  hotpotqa.yaml  pubmed.yaml
tests/: test_gepa_optimizer.py
(+17 files in other folders)
